
lib_LTLIBRARIES = libgcomm.la 

libgcomm_la_SOURCES = 		\
	conf.cpp		\
	defaults.cpp            \
	histogram.cpp		\
	uuid.cpp		\
	view.cpp		\
	protostack.cpp		\
	transport.cpp		\
	gmcast_proto.cpp        \
	gmcast.cpp		\
	evs_message2.cpp	\
	evs_input_map2.cpp 	\
	evs_node.cpp		\
	evs_consensus.cpp	\
	evs_proto.cpp		\
	pc_proto.cpp		\
	pc.cpp

