
lib_LTLIBRARIES = libgcomm.la 

libgcomm_la_SOURCES =      \
	conf.cpp           \
	defaults.cpp       \
	histogram.cpp      \
	uuid.cpp           \
	view.cpp           \
	protostack.cpp     \
	transport.cpp      \
	gmcast_proto.cpp   \
	gmcast.cpp         \
	evs_message2.cpp   \
	evs_input_map2.cpp \
	evs_node.cpp       \
	evs_consensus.cpp  \
	evs_proto.cpp      \
	pc_proto.cpp       \
	pc.cpp             \
	protonet.cpp \
	gu.cpp \
	defaults.hpp         \
	evs_consensus.hpp    \
	evs_input_map2.hpp   \
	evs_message2.hpp     \
	evs_node.hpp         \
	evs_proto.hpp        \
	evs_seqno.hpp        \
	gmcast.hpp           \
	gmcast_link.hpp      \
	gmcast_message.hpp   \
	gmcast_node.hpp      \
	gmcast_proto.hpp     \
	histogram.hpp        \
	pc.hpp               \
	pc_message.hpp       \
	pc_proto.hpp         \
	profile.hpp          \
	socket.hpp

include_HEADERS =            \
	gcomm/conf.hpp       \
	gcomm/exception.hpp  \
	gcomm/map.hpp        \
	gcomm/order.hpp      \
	gcomm/protolay.hpp   \
	gcomm/protostack.hpp \
	gcomm/transport.hpp  \
	gcomm/types.hpp      \
	gcomm/util.hpp       \
	gcomm/uuid.hpp       \
	gcomm/view.hpp
